--- a/source/Makefile_windows
+++ b/source/Makefile_windows
@@ -87,7 +87,7 @@ endif
 endif
 
 SRCFILES = beagle.c kwarg.c simplify.c flip.c gene.c llist.c elist.c hashtable.c getwordsize.c common.c bounds.c exact.c mergesort.c enumerate.c arg.c backtrack.c topological_sort.c mystring.c
-HDRFILES = kwarg.h gene.h llist.h elist.h hashtable.h common.h bounds.h exact.h mergesort.h enumerate.h arg.h backtrack.h topological_sort.h mystring.h
+HDRFILES = gene.h llist.h elist.h hashtable.h common.h bounds.h exact.h mergesort.h enumerate.h arg.h backtrack.h topological_sort.h mystring.h
 EXECUTABLES = beagle kwarg simplify flip getwordsize
 DATA = kreitman_snp.txt
 SCRIPTS = generatebitfunctions.py
@@ -113,7 +113,7 @@ flip: flip.o gene.o bounds.o exact.o llist.o elist.o hashtable.o common.o bitfun
 
 beagle.o: beagle.c gene.h bounds.h common.h exact.h Makefile
 
-kwarg.o: kwarg.c kwarg.h gene.h bounds.h exact.h common.h backtrack.h Makefile
+kwarg.o: kwarg.c gene.h bounds.h exact.h common.h backtrack.h Makefile
 
 simplify.o: simplify.c gene.h bounds.h exact.h common.h backtrack.h Makefile
 
